--- a/style.css
+++ b/style.css
@@ -21,3 +21,14 @@ body{
     font-size: 1.5rem;
     text-decoration: underline;
 }
+
+@media screen and (max-width: 600px) {
+    
+    body {
+        background-color: mistyrose;
+    }
+    #vol{
+        width: 80%;
+        padding: 5px;
+        box-sizing: border-box;
+    }}
