--- a/style.css
+++ b/style.css
@@ -83,12 +83,22 @@ body{
     text-align: center;
     margin:0;
   }
+
+  #footer{
+
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    color: black;
+}
   
 @media screen and (max-width: 600px) {
     
     body {
         background-color: mistyrose;
-        padding-top: 70px;
+        padding-top: 110px;
     }
     div{
         width:70%;
@@ -112,8 +122,17 @@ body{
     #boton{
         font-size: 14px;
     }
-    }
 
+    #footer{
+
+        position: absolute;
+        bottom:-300px;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+   }
+
+    }
 
 /* Style viejo, primera versión 
 
