--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ div{
     margin-top: 4rem;
     margin-bottom:4rem;
     padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-bottom:1rem;
     width: 50%;
     background-color: lightpink;
     border-style: solid;
@@ -25,7 +25,7 @@ body{
     font-family: Georgia, "Times New Roman", Times, serif;
     background-color: mistyrose;
     margin: 0;
-    padding: 20px;
+    padding: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -87,10 +87,10 @@ body{
   #footer{
 
     position: absolute;
-    bottom: 0;
+    bottom: -110px;
     left: 0;
     width: 100%;
-    height: 50px;
+    height: 0px;
     color: black;
 }
   
